--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,21 @@ search:
   field: post
   format: html
   limit: 10000
+
+Plugins:
+- hexo-generator-baidu-sitemap
+- hexo-generator-sitemap
+
+baidusitemap:
+    path: baidusitemap.xml
+sitemap:
+    path: sitemap.xml
+
+baidu_url_submit:
+  count: 100                    # 提交最新的一个链接
+  host: www.kangyuansheng.top     # 在百度站长平台中注册的域名
+  token: VhDMqVJvlTi9vee4       # 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt          # 文本文档的地址， 新链接会保存在此文本文档里
+
+deploy:
+ - type:baidu_url_submitter
