--- a/_config.yml
+++ b/_config.yml
@@ -39,11 +39,17 @@ post_asset_folder: true
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'tomorrow'
+  line_number: false    # default false
+  custom_css:
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -102,3 +108,23 @@ baidu_url_submit:
   host: www.kangyuansheng.top     # 在百度站长平台中注册的域名
   token: VhDMqVJvlTi9vee4       # 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
   path: baidu_urls.txt          # 文本文档的地址， 新链接会保存在此文本文档里
+
+permalink_pinyin:
+  enable: true
+  separator: '-' # default: '-'
+
+wordCount:
+  enable: false # 将这个值设置为 true 即可.
+  postWordCount: true
+  min2read: true
+  totalCount: true
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
