--- a/themes/hexo-theme-matery-master/_config.yml
+++ b/themes/hexo-theme-matery-master/_config.yml
@@ -114,8 +114,8 @@ code:
 reward:
   enable: true
   title: 你的赏识是我前进的动力
-  wechat: /medias/reward/wechat.png
-  alipay: /medias/reward/alipay.jpg
+  wechat: http://kyshblogs.oss-cn-beijing.aliyuncs.com/blogs/WeChatExceptional.png
+  alipay: http://kyshblogs.oss-cn-beijing.aliyuncs.com/blogs/zhifubao-fukuanma.png
 
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
