[博客]-[基础]---主题优化

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
+title: 康源晟的技术小站
+subtitle: 康源晟的技术小站
+description: 学而不思则罔，思而不学则殆。——孔子
 keywords:
 author: KangYuanSheng
 language: zh-CN
